Fixed layout issue

--- a/src/components/pages/ReleaseInformation/ReleaseInformation.css
+++ b/src/components/pages/ReleaseInformation/ReleaseInformation.css
@@ -1,7 +1,7 @@
 .album-art-drop {border:solid 1px #CCC; background-color:#d9f3fe; height:190px;}
 .cover-art label {vertical-align:top; padding-top:5px;}
 			
-.notes-row {margin-left:15px;}
+.notes-row label {vertical-align:top;}
 .notes-row > textarea {vertical-align:top; height:120px;}
 
 label.custom-checkbox {display: inline-block; vertical-align:middle;}
